--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    	<div class="container">
    		<div class="headerdata">
    			<div class="logo">
-   				<img src="image/logo.png">
+   				<img src="image/logo.jpg">
    			</div>
    			<div class="menuItem">
    				<ul>
